# Shark_3_0_Qt

./: .gitignore  CMakeLists.txt  README.md  combine_code.sh  connect_db.conf
Shark_UI/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  nw_connection_monitor.cpp  nw_connection_monitor.h  resources.qrc  screen_chat_list.cpp  screen_chat_list.h  screen_chat_list.ui  screen_chatting.cpp  screen_chatting.h  screen_chatting.ui  screen_logger_form.cpp  screen_logger_form.h  screen_logger_form.ui  screen_login.cpp  screen_login.h  screen_login.ui  screen_main_window.cpp  screen_main_window.h  screen_main_window.ui  screen_main_work.cpp  screen_main_work.h  screen_main_work.ui  screen_new_chat_participants.cpp  screen_new_chat_participants.h  screen_new_chat_participants.ui  screen_register.cpp  screen_register.h  screen_register.ui  screen_user_data.cpp  screen_user_data.h  screen_user_data.ui  screen_user_profile.cpp  screen_user_profile.h  screen_user_profile.ui
Shark_UI/exceptions_qt/: errorbus.h  exception_login.h  exception_my.h  exception_network.h  exception_router.h  exception_sql.h  exception_valid.h
Shark_UI/images/: resources.qrc
Shark_UI/models/: model_chat_list.cpp  model_chat_list.h  model_chat_list_delegate.cpp  model_chat_list_delegate.h  model_chat_mess_delegate.cpp  model_chat_mess_delegate.h  model_chat_messages.cpp  model_chat_messages.h  model_user_list.cpp  model_user_list.h  model_user_list_delegate.cpp  model_user_list_delegate.h
build_macos/: libcore.dylib  server
build_macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_macos/Shark_UI/Shark_ui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_macos/Shark_UI/Shark_ui_autogen/EWIEGA46WW/: moc_logger.cpp  moc_logger.cpp.d  moc_nw_connection_monitor.cpp  moc_nw_connection_monitor.cpp.d  moc_screen_chat_list.cpp  moc_screen_chat_list.cpp.d  moc_screen_chatting.cpp  moc_screen_chatting.cpp.d  moc_screen_logger_form.cpp  moc_screen_logger_form.cpp.d  moc_screen_login.cpp  moc_screen_login.cpp.d  moc_screen_main_window.cpp  moc_screen_main_window.cpp.d  moc_screen_main_work.cpp  moc_screen_main_work.cpp.d  moc_screen_new_chat_participants.cpp  moc_screen_new_chat_participants.cpp.d  moc_screen_register.cpp  moc_screen_register.cpp.d  moc_screen_user_data.cpp  moc_screen_user_data.cpp.d  moc_screen_user_profile.cpp  moc_screen_user_profile.cpp.d
build_macos/Shark_UI/Shark_ui_autogen/IVK4DJNV27/: moc_model_chat_list.cpp  moc_model_chat_list.cpp.d  moc_model_chat_list_delegate.cpp  moc_model_chat_list_delegate.cpp.d  moc_model_chat_mess_delegate.cpp  moc_model_chat_mess_delegate.cpp.d  moc_model_chat_messages.cpp  moc_model_chat_messages.cpp.d  moc_model_user_list.cpp  moc_model_user_list.cpp.d
build_macos/Shark_UI/Shark_ui_autogen/STT6FJMQGJ/: moc_errorbus.cpp  moc_errorbus.cpp.d
build_macos/Shark_UI/Shark_ui_autogen/include/: ui_screen_chat_list.h  ui_screen_chatting.h  ui_screen_logger_form.h  ui_screen_login.h  ui_screen_main_window.h  ui_screen_main_work.h  ui_screen_new_chat_participants.h  ui_screen_register.h  ui_screen_user_data.h  ui_screen_user_profile.h
build_macos/clientlib_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_macos/clientlib_autogen/2MJGWJB4P3/: moc_client_session.cpp  moc_client_session.cpp.d
build_macos/clientlib_autogen/GBTSBEWXUV/: moc_client_core.cpp  moc_client_core.cpp.d
build_macos/core_autogen/: deps  moc_predefs.h
build_macos/server_autogen/: deps  moc_predefs.h
scripts/: build_linux.sh  build_macos.sh  scripts.txt
scripts/scripts_postgres/: create.odt  fill_passhash.odt  fill_users.odt  func and trig.odt  sql_commands.sql  sql_create_tables.sql  sql_insert_chat1.sql  sql_insert_chat2.sql
src/client/: client_session.cpp  client_session.h
src/client/core/: client_core.cpp  client_core.h
src/client/processors/: client_session_create_objects.cpp  client_session_create_objects.h  client_session_dto_builder.cpp  client_session_dto_builder.h  client_session_dto_setter.cpp  client_session_dto_setter.h  client_session_modify_objects.cpp  client_session_modify_objects.h
src/client/tcp_transport/: session_types.h  tcp_transport.cpp  tcp_transport.h
src/core/chat/: chat.cpp  chat.h
src/core/chat_system/: chat_system.cpp  chat_system.h
src/core/exceptions_cpp/: login_exception.h  my_exception.h  network_exception.h  sql_exception.h  validation_exception.h
src/core/message/: message.cpp  message.h  message_content.h  message_content_struct.h
src/core/system/: date_time_utils.cpp  date_time_utils.h  picosha2.h  safe_socket.h  serialize.cpp  serialize.h  system_function.cpp  system_function.h
src/core/user/: user.cpp  user.h  user_chat_list.cpp  user_chat_list.h
src/dto/: dto_struct.h
src/server/: server.cpp  server_session.cpp  server_session.h
src/server/db/: postgres_db.cpp  postgres_db.h
src/server/packet_parser/: packet_parser.cpp  packet_parser.h
src/server/processors/: user_account_update_processor.cpp  user_account_update_processor.h  user_ban_block_processor.cpp  user_ban_block_processor.h  user_data_query_processor.cpp  user_data_query_processor.h  user_database_init_processor.cpp  user_database_init_processor.h  user_object_creation_processor.cpp  user_object_creation_processor.h  user_registration_processor.cpp  user_registration_processor.h
src/server/session_transport/: session_transport.cpp  session_transport.h
src/server/sql_commands/: sql_commands.cpp  sql_commands.h
src/server/sql_queries/: chat_sql_reader.cpp  chat_sql_reader.h  chat_sql_writer.cpp  chat_sql_writer.h  database_init_sql_builder.cpp  database_init_sql_builder.h  database_sql_manager.cpp  database_sql_manager.h  message_sql_writer.cpp  message_sql_writer.h  user_sql_reader.cpp  user_sql_reader.h  user_sql_writer.cpp  user_sql_writer.h
